--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   flutter_spinkit: ^5.1.0
   google_sign_in: ^5.3.3
   http: ^0.13.4
+  sqflite: ^2.0.2+1
+  path_provider: ^2.0.11
+  connectivity_plus: ^2.3.5
 
 
   # The following adds the Cupertino Icons font to your application.
